--- a/TestLibApp/TestLibApp/Base.lproj/Main.storyboard
+++ b/TestLibApp/TestLibApp/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +13,51 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestLibApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Sjh-oP-2nM" userLabel="LibSelector">
+                                <rect key="frame" x="142" y="40" width="91" height="29"/>
+                                <segments>
+                                    <segment title="Lib A"/>
+                                    <segment title="Lib B"/>
+                                </segments>
+                                <connections>
+                                    <action selector="libSelectorValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="FOi-ym-HHA"/>
+                                </connections>
+                            </segmentedControl>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G16-Oo-4HS" userLabel="ResultTextField">
+                                <rect key="frame" x="0.0" y="318.5" width="375" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jye-iD-iCk" userLabel="GetDayButton">
+                                <rect key="frame" x="132" y="268.5" width="111" height="30"/>
+                                <state key="normal" title="Get Current Day"/>
+                                <connections>
+                                    <action selector="getDayButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NJ0-vk-SfE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Jye-iD-iCk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7IF-AV-kHN"/>
+                            <constraint firstItem="G16-Oo-4HS" firstAttribute="top" secondItem="Jye-iD-iCk" secondAttribute="bottom" constant="20" id="DMD-ue-eVJ"/>
+                            <constraint firstItem="Sjh-oP-2nM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="YVU-3E-xSh"/>
+                            <constraint firstItem="G16-Oo-4HS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ais-Qw-YKC"/>
+                            <constraint firstItem="Sjh-oP-2nM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qZC-iU-vBh"/>
+                            <constraint firstItem="G16-Oo-4HS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uvL-LT-jvB"/>
+                            <constraint firstItem="G16-Oo-4HS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yb0-UD-wGi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="G16-Oo-4HS" secondAttribute="trailing" id="zFW-pU-KI7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="resultTextField" destination="G16-Oo-4HS" id="YCV-3I-fG7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
